test/sema/typeck/struct/type-params-trait-bound-err.out
error: type `Int32` does not implement trait `MyTrait`.
--> type-params-trait-bound-err.dora:3:10
 | trait MyTrait {}
 | struct Foo[T: MyTrait](Int32)
 | fn f(_x: Foo[Int32]) {}
            ~~~~~~~~~~
 | 
1 error found.
