test/sema/typeck/struct/type-params-trait-bound-err.dora
trait MyTrait {}
struct Foo[T: MyTrait](Int32)
fn f(_x: Foo[Int32]) {}
